[gd_scene load_steps=52 format=2]

[ext_resource path="res://vinecell.gd" type="Script" id=1]
[ext_resource path="res://vine_spriteframes.tres" type="SpriteFrames" id=2]
[ext_resource path="res://vinetips.png" type="Texture" id=3]
[ext_resource path="res://white.gdshader" type="Shader" id=4]
[ext_resource path="res://break_shader.gshader.gdshader" type="Shader" id=5]
[ext_resource path="res://break_shader_material.tres" type="Material" id=6]
[ext_resource path="res://teleport2.tres" type="Animation" id=7]
[ext_resource path="res://sparkle.png" type="Texture" id=8]
[ext_resource path="res://vine_cable-sheet.png" type="Texture" id=9]
[ext_resource path="res://vine_cable-sheet2.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=38]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id=55]
shader = ExtResource( 5 )
shader_param/cutoff = 1.0
shader_param/flash_color = Color( 0.427451, 0.196078, 0.458824, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 12, 12 )

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wrapee:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:material:shader_param/cutoff")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:material:shader_param/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("wrapee:use_parent_material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("wrapee:material:shader_param/flash_modifier")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("wrapee:material:shader_param/cutoff")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=53]
resource_name = "break"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:material:shader_param/cutoff")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=36]
resource_name = "uproot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("wrapee:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "white"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 10 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 10 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 76 ) ],
"loop": true,
"name": "DD",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ), SubResource( 63 ) ],
"loop": false,
"name": "DL",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 64 ) ],
"loop": false,
"name": "DR",
"speed": 5.0
}, {
"frames": [ SubResource( 77 ) ],
"loop": true,
"name": "LL",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 65 ) ],
"loop": false,
"name": "LR",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ) ],
"loop": true,
"name": "RR",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 66 ) ],
"loop": false,
"name": "UD",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ), SubResource( 67 ) ],
"loop": false,
"name": "UL",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 68 ) ],
"loop": false,
"name": "UR",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "UU",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="vinecell" type="Node2D"]
material = ExtResource( 6 )
script = ExtResource( 1 )
type = 5

[node name="pivot" type="Node2D" parent="."]
material = SubResource( 38 )

[node name="wrapee" type="Sprite" parent="pivot"]
material = SubResource( 55 )
use_parent_material = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="pivot"]
use_parent_material = true
frames = ExtResource( 2 )
animation = "active"
playing = true

[node name="breakbox" type="Area2D" parent="pivot"]
collision_layer = 16
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/breakbox"]
shape = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="pivot"]
anims/RESET = SubResource( 35 )
anims/break = SubResource( 53 )
anims/teleport2 = ExtResource( 7 )
anims/uproot = SubResource( 36 )
anims/white = SubResource( 39 )

[node name="vinecable" type="AnimatedSprite" parent="pivot"]
frames = SubResource( 69 )
animation = "RR"

[node name="head" type="AnimatedSprite" parent="pivot"]
use_parent_material = true
frames = SubResource( 17 )
animation = "right"

[node name="activeSparkle" type="AnimatedSprite" parent="pivot"]
frames = SubResource( 62 )
frame = 1
playing = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="pivot/breakbox" to="." method="_on_breakbox_area_entered"]
[connection signal="animation_finished" from="pivot/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
